--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="app.js" async></script>
 </head>
 <body>
-    <p id="result"></p>
+    <p id="para1"></p>
+    <p id="para2"></p>
+    <p id="para3"></p>
 </body>
 </html>
